# geraldmag

./: .gitignore  CHANGELOG  README.md  pyproject.toml
docs/: SCAFFOLD
src/geraldmag/: __init__.py  assets.py  builder.py  context.py  core.py  engine.py  env.py  main.py
src/geraldmag/commands/: __init__.py  build.py  init.py  new.py
src/geraldmag/processors/: __init__.py  html.py  markdown.py  types.py
src/geraldmag/templates/: __init__.py
src/geraldmag/templates/init/: README.md  _gitignore  main.css
src/geraldmag/templates/skeleton/: index.html
src/geraldmag/templates/skeleton/styles/: main.scss
