[project]
name = "geraldmag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "weasyprint>=65.1",
    "click>=8.1.7",
    "jinja2>=3.1.3",
    "toml>=0.10.2",
]

[project.scripts]
geraldmag = "geraldmag.main:cli"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pyright>=1.1.399",
]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.pyright]
include = [
    "src"
]
typeCheckingMode = "strict"
