[project]
name = "geraldmag"
version = "0.1.0"
description = "A tool for creating complex and large documents (like magazines)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "weasyprint>=65.1",
    "click>=8.1.7",
    "jinja2>=3.1.3",
    "toml>=0.10.2",
    "python-frontmatter>=1.1.0",
    "markdown>=3.8",
    "nanoid>=2.0.0",
]
authors = [{ name = "Tehoor Marjan", email = "tehoor.marjan@gmail.com" }]
license = { text = "MIT" }

[dependency-groups]
dev = ["black>=25.1.0", "isort>=6.0.1", "pyright>=1.1.399"]

[project.scripts]
geraldmag = "geraldmag.main:cli"
check = "scripts.check:main"

[tool.uv]
package = true

[tool.pdm]
distribution = true

[tool.pdm.scripts]
tisort = "isort ."
tblack = "black ."
tpyright = "pyright"
check.composite = ["tblack", "tisort", "tpyright"]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
